--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     // console.log(userStatus)
     // if (userStatus == "success" ){
     //   // window.location.replace("./Authentication/login.html")
-    //   // window.location.replace("./userProfile/Profile.html")
+    //   // window.location.replace("./userProfile/profile.html")
     // }
     // else{
     //   // console.log("go to user profile")
